--- a/Data Programming - Assignment 3.ipynb
+++ b/Data Programming - Assignment 3.ipynb
@@ -484,20 +484,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 172,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'print_windiest' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-171-537203aa0192>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;31m#Print 10 windiest cities per season\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[0mprint_windiest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Winter\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mq1_cities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0mprint_windiest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Spring\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mq2_cities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0mprint_windiest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Summer\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mq3_cities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'print_windiest' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Winter\n",
+      "--------------\n",
+      "Kiel\n",
+      "Bremerhaven\n",
+      "Copenhagen\n",
+      "Odense\n",
+      "Helsingborg\n",
+      "Århus\n",
+      "Harburg\n",
+      "Oldenburg\n",
+      "Groningen\n",
+      "Zwolle\n",
+      "\n",
+      "Spring\n",
+      "--------------\n",
+      "Nazilli\n",
+      "Denizli\n",
+      "Aydın\n",
+      "Plovdiv\n",
+      "Stara Zagora\n",
+      "Burgas\n",
+      "Varna\n",
+      "Constanţa\n",
+      "Buzău\n",
+      "Galaţi\n",
+      "\n",
+      "Summer\n",
+      "--------------\n",
+      "Sfax\n",
+      "Djelfa\n",
+      "Biskra\n",
+      "Khenchela\n",
+      "Tébessa\n",
+      "Taza\n",
+      "Oujda-Angad\n",
+      "Tlemcen\n",
+      "Saïda\n",
+      "Tiaret\n",
+      "\n",
+      "Autumn\n",
+      "--------------\n",
+      "Tiraspol\n",
+      "Iaşi\n",
+      "Bacău\n",
+      "Bălţi\n",
+      "Chisinau\n",
+      "Zemun\n",
+      "Timişoara\n",
+      "Ploieşti\n",
+      "Buzău\n",
+      "Szeged\n"
      ]
     }
    ],
